# gnollama

./: .gitignore  README.md  code-analysis-improvement-plan-2.md  com.github.jackrabbithanna.Gnollama.json  com.github.jackrabbithanna.Gnollama.json~  gnollama.doap  io.github.jackrabbithanna.Gnollama.json  meson.build  messages.mo
data/: com.github.jackrabbithanna.Gnollama.desktop.in  com.github.jackrabbithanna.Gnollama.gschema.xml  com.github.jackrabbithanna.Gnollama.metainfo.xml.in  com.github.jackrabbithanna.Gnollama.service.in  gschemas.compiled  io.github.jackrabbithanna.Gnollama.desktop.in  io.github.jackrabbithanna.Gnollama.gschema.xml  io.github.jackrabbithanna.Gnollama.metainfo.xml.in  io.github.jackrabbithanna.Gnollama.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  gnollama.pot  meson.build  pt.po
src/: ai_bubble.ui  bubbles.py  bubbles.ui  database.py  gnollama.gresource.xml  gnollama.in  history_row.ui  host_edit_dialog.ui  host_manager.py  host_manager.ui  main.py  markdown_view.py  meson.build  model_details_view.ui  model_manager.py  model_manager.ui  ollama.py  pull_model_dialog.ui  session.py  shortcuts-dialog.ui  storage.py  style.css  tab.py  tab.ui  user_bubble.ui  utils.py  window.py  window.ui
src/widgets/: __init__.py  chat_input.py  chat_input.ui  message_list.py  message_list.ui  options_panel.py  options_panel.ui
